# ml_ops_project

./: README.md  docker-compose.yml  predict.py  pyproject.toml  train.py
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  main.py
data/: holdout.csv  train.csv
frontend/: Dockerfile  app.py
models/: model.joblib
notebooks/: taghi-mammadov-eda (1).ipynb  taghi-mammadov-fe1 (1).ipynb  taghi-mammadov-fe2 (1).ipynb  taghi-mammadov-trainmodel (1).ipynb
predictions/: preds.csv
src/ml_ops_project/: data_utils.py  fe.py  model.py
tests/: conftest.py  test_data_utils.py  test_fe.py
