[project]
name = "ml_ops_project"
version = "0.1.0"
requires-python = ">=3.12"

# Ruff
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks/**"]

[tool.ruff.lint]
extend-select = ["I"]  # import sorting rule

# Black
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "notebooks/"

# isort
[tool.isort]
profile = "black"
skip_glob = ["notebooks/*"]
